# simple_rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/simple_rag/: api.py  eval.py  eval_report.json  main.py  rag.py
src/simple_rag/static/: index.html  style.css
