[project]
dependencies = []
name = "simple_rag"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
simple_rag = { path = ".", editable = true }
pymupdf = ">=1.26.1,<2"

[tool.pixi.tasks]
serve = "uvicorn simple_rag.api:app --reload"
eval = "python -m simple_rag.eval"
fmt = "ruff format ."
lint = "ruff check ."

[tool.pixi.dependencies]
google-genai = ">=1.0.0,<2"
numpy = ">=2.4.2,<3"
fastapi = ">=0.115,<1"
uvicorn = ">=0.34,<1"
python-multipart = ">=0.0.20,<1"
ruff = ">=0.9,<1"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
